apps/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: with-proxyauth-ingress
  namespace: homelab
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://tinyauth.auth.svc.cluster.local:3000/api/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.realtong.cn/login"
    nginx.ingress.kubernetes.io/auth-signin-redirect-param: redirect_uri
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adg.realtong.cn
        - dns.realtong.cn
  rules:
    - host: adg.realtong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab
                port:
                  number: 3000
    - host: dns.realtong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab
                port:
                  number: 3000
